--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "lodash-es": "4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/lodash-es": "4.17.6",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
