--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "leaflet": "^1.9.4",
     "lodash-es": "4.17.21",
+    "papaparse": "^5.4.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
     "@types/lodash-es": "4.17.6",
+    "@types/papaparse": "^5.3.14",
     "@vitejs/plugin-vue": "^5.0.4",
+    "i": "^0.3.7",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
